<resources>
    <string name="app_name">Bienestar Estudiantil</string>
    <string name="app_name_shor">Bienestar Estudiantil</string>
    <string name="menu_send">Send</string>
    <string name="next">SIGUIENTE</string>
    <string name="start">COMENZAR</string>
    <string name="title_activity_profile">Profile</string>
    <string name="txtDeportesFrag">La UNSE considera que el deporte es un componente fundamental en la formación de sus estudiantes. El deporte es salud, ocupación del tiempo libre, afán de superación y socialización.\n\n
        El área de deportes es la encargada de programar y coordinar las diversas actividades con el fin de facilitar a los estudiantes los medios necesarios para la práctica deportiva.\n\n
        Cada año se programan ligas deportivas en  las disciplinas de básquet, fútbol, rugby, voleibol y ajedrez. También para aprender o seguir desarrollando las competencias deportivas se ofrece la formación y el entrenamiento en voleibol masculino y femenino, rugby masculino y femenino, cestobol, hockey y fútbol femenino.\n\n
        En algunas disciplinas deportivas se forman los equipos representativos que participan en las ligas provinciales. También, la UNSE participa de los Juegos deportivos nacionales que se realizan cada dos años en distintas universidades del país.\n\n
        Por inscripciones a cualquiera de los deportes, puedes realizarlo mediante la aplicación donde tendrás toda la información y también puedes comunicarte por teléfono o por mail para más información.\n\n

 </string>
    <string name="txtReserva">Elige una fecha para ver la disponibilidad de %s</string>
    <string name="txtAfiliados">1. Constancia de descuento del área personal.\n2. Recibo SADAIC en caso de fiestas o eventos.\n3. Recibo Calidad de Vida en caso de fiestas y eventos.\n4. Recibo oficial de Tesoría.</string>
    <string name="txtdocnodoc">1. Constancia de empleado y/o área que presta servicio.\n2. Recibo SADAIC en caso de fiestas o eventos.\n3. Recibo Calidad de Vida en caso de fiestas y eventos.\n4. Recibo oficial de Tesoría.</string>
    <string name="txtalumnegre">1. Constancia de alumno regular y en caso de egresados se elevará una nota solicitando su confirmación como tal.\n2. Recibo SADAIC en caso de fiestas o eventos.\n3. Recibo Calidad de Vida en caso de fiestas y eventos.\n4. Recibo oficial de Tesoría.</string>
    <string name="txtpartic">1. Fotocopia del DNI.\n2. Recibo SADAIC en caso de fiestas o eventos.\n3. Recibo Calidad de Vida en caso de fiestas y eventos.\n4. Recibo oficial de Tesoría.</string>
    <string name="camposVacios">Hay campos vacios, por favor completalos</string>
    <string name="noNumero">%s debe ser un número</string>
    <string name="noAlturaPeso">La altura o el peso tienen formato incorrecto</string>
    <string name="redesSociales">Facebook o Instagram tienen un formato incorrecto</string>
    <string name="noActividadCompleta">Debe completar información sobre la actividad que realiza</string>
    <string name="errorInternoAdmin">Error interno, contacta al Administrador</string>
    <string name="actualizado">¡Actualizado!</string>
    <string name="actualizadoError">¡Error al actualizar!</string>
    <string name="camposInvalidos">Existen campos inválidos, reintente</string>
    <string name="tokenInvalido">No tiene autorización para procesar la tarea</string>
    <string name="tokenInexistente">Necesita de un token para operar en el sistema</string>
    <string name="noData">No existen datos</string>
    <string name="servidorOff">Error de conexión o servidor fuera de rango</string>
    <string name="errorLocation">Error al obtener ubicación</string>
    <string name="elegirIntensidad">Debe elegir la intensidad de su actividad</string>
    <string name="noActualizableForm">No se puede actualizar, el formulario ya fue presentado</string>
    <string name="noExiste">Registro inexistente</string>
    <string name="noCambioContrasenia">No se puedo recuperar la clave, contacta al Administrador</string>
    <string name="cuentaInexistente">Los datos no coinciden con ninguna cuenta</string>
    <string name="errorCredencialToken">Error al crear credenciales del usuario, reintente</string>
    <string name="usuarioExiste">Ya existe un usuario con el DNI ingresado, prueba con otro</string>
    <string name="errorCrearUsuario">Error interno al intentar registrarte</string>
    <string name="contraseniaActualInvalida">La contraseña actual ingresada es inválida</string>
    <string name="noCredenciales">No posee credenciales de este tipo</string>
    <string name="inscripcionExitosa">¡Inscripción realizada!</string>
    <string name="inscripcionErronea">Error al inscribirse, intente nuevamente</string>
    <string name="deportesSinConvocatoria">El deporte no tiene convocatoria vigente</string>
    <string name="deporteCerroConvocatoria">El deporte cerró su convocatoria</string>
    <string name="deporteYaInscripto">Ya estas inscripto en la actividad</string>
    <string name="noConexion">Para visualizar el elemento debe estar conectado a Internet</string>
    <string name="usuarioListError">Error al obtener usuarios intente nuevamente</string>
    <string name="listError">Error al obtener %s intente nuevamente</string>
    <string name="listVacio">No existen %s</string>
    <string name="usuarioListVacio">No existe ningún usuario</string>
    <string name="tituloListaUsuarios">Lista de Usuarios</string>
    <string name="usuarioNoExiste">No existe el usuario solicitado</string>
    <string name="legajoInvalido">Número de legajo inválido. Ej: 12345/10</string>
    <string name="camposIncompletos">Por favor, complete los campos</string>
    <string name="anioIngesoNoValido">El año de ingreso no es válido</string>
    <string name="perfilActualizado">¡Perfil actualizado!</string>
    <string name="fotoPerfilError">No se pudo actualizar su foto de perfil</string>
    <string name="fotoPerfilExito">¡Foto actualizada!</string>
    <string name="cambioPrimeroGuardar">Primero debe guardar los cambios</string>
    <string name="noSelectImagen">No se seleccionó ninguna imagen</string>
    <string name="imagenErrorCrop">No se puedo recortar la imagen, intente nuevamente</string>
    <string name="cambioNoGuardado">¡No se guardaron cambios!</string>
    <string name="imagenErrorLoad">No se pudo cargar la imagen solicitada</string>
    <string name="imagenNoLoad">No se pudo cargar la imagen, reintente</string>
    <string name="usuarioDeshabilitado">¡Usuario deshabilidado!</string>
    <string name="usuarioHabilitado">¡Usuario habilitado!</string>
    <string name="usuarioEliminar">¿Seguro que desea dar de %s al usuario %s %s ?</string>
    <string name="noticiaEliminar">¿Seguro que desea dar de %s la noticia?</string>
    <string name="btnAlta">DAR DE ALTA</string>
    <string name="btnBaja">DAR DE BAJA</string>
    <string name="advertencia">¡Advertencia!</string>
    <string name="áraseniaMinimo">La contraseña debe tener mínimo de 4 caracteres</string>
    <string name="contraseniaNoIguales">Las contraseñas no son identicas</string>
    <string name="presionaDeNuevo">Presiona de nuevo para salir</string>
    <string name="usuarioNoRegistro">Error al crear el usuario</string>
    <string name="errorDNI">Error al obtener los datos del DNI</string>
    <string name="iniciarSesionConf">Inicia sesión para confirmar</string>
    <string name="fotoPerfilRecordatorio">¡Recuerda subir una foto luego!</string>
    <string name="usuarioRegistrado">¡Registrado!</string>
    <string name="campoVacio">El campo no puede ser vacío</string>
    <string name="dniInvalido">Número de DNI inválido</string>
    <string name="campoNoGrande">El campo debe tener al menos tres carácteres</string>
    <string name="fechaInvalida">La fecha no tiene un formato válido</string>
    <string name="numeroTelInvalido">El número debe tener al menos 8 dígitos</string>
    <string name="emailInvalido">El email no es válido</string>
    <string name="domicilioInvalido">Debe contener al menos una letra y un número</string>
    <string name="campoNoFormato">El campo solo admite letras</string>
    <string name="contraseniaActualizada">¡Contraseña actualizada!</string>
    <string name="documentoNoCompletado">¡Error al completar el documento!</string>
    <string name="inscripcionNoCarga">Error al obtener la inscripcion. ¿Desea volver a intentarlo?</string>
    <string name="estadoActualizado">¡Estado actualizado!</string>
    <string name="numeroNoValido">Valor númerico no valido</string>
    <string name="errorCrearCredencial">¡Error al crear la credencial!</string>
    <string name="credencialCreada">¡Credencial creada!\nVuelve a ingresar para visualizarla</string>
    <string name="permisosActualizados">¡Permisos actualizados!</string>
    <string name="permisosAlgunosNo">¡Algunos permisos no se actualizaron!</string>
    <string name="primeroBuscar">¡Primero debe buscar un usuario!</string>
    <string name="usuarioPermisosOn">El usuario ya posee permisos</string>
    <string name="mensajeDenegado">Esta función sólo están disponibles para usuarios registrados, si desea utilizarlas por favor regístrese.</string>
    <string name="itemSistema">Gestión del Sistema</string>
    <string name="itemPerfil">Mi Perfil</string>
    <string name="itemNosotros">Sobre nosotros</string>
    <string name="itemContacto">Contactos</string>
    <string name="itemCondiciones">Términos y condiciones</string>
    <string name="sesionIniciada">¡Sesión iniciada!</string>
    <string name="usuarioInvalido">Usuario o contraseña inválidos</string>
    <string name="usuarioInhabilitado">Usuario deshabilitado, contacta al Administrador</string>
    <string name="regularidadVigente">El alumno ya posee una regularidad ese año</string>
    <string name="regularidadNoAgregada">Regularidad no agregada</string>
    <string name="regularidadAgregada">¡Regularidad otorgada!</string>
    <string name="anioInvalido">¡Debe ingresar un año válido!</string>
    <string name="regularidadActualizada">¡Regularidad actualizada!</string>
    <string name="regularidadNoCambiada">¡Error al cambiar!</string>
    <string name="archivosError">Error al obtener archivos, intente nuevamente</string>
    <string name="archivosVacio">No existen archivos</string>
    <string name="tituloArchivos">Gestión de Archivos</string>
    <string name="archivoNoSeleccionado">Archivo no seleccionado</string>
    <string name="archivoSeleecionError">No se elegió ningun archivo</string>
    <string name="archivoSubido">¡Archivo subido!</string>
    <string name="archivoError">¡Error al cargar archivo!</string>
    <string name="nombreVacio">Debe elegir un nombre</string>
    <string name="archivoGrande">El archivo es demasiado grande</string>
    <string name="archivoGrande2">El archivo es demasiado grande (mayor a 5MB)</string>
    <string name="archivoActualizado">¡Archivo actualizado!</string>
    <string name="tituloArchivosNuevo">Nuevo Archivo</string>
    <string name="txtRecNo">Cuando vayas a sacar las fotos de la documentación, ten en cuenta las siguientes recomendaciones:\n- NO saques la foto como se muestra en el ejemplo, trata de que no haya ningún elemento al rededor.\n- NO sacar fotos a papeles arrugados o que no se note lo escrito.\n- Evita sacar fotos con la luz directa, eso ocasiona que haya sombra al momento de tomar la foto.</string>
    <string name="txtRecSi">Algunos tips para sacar unas buenas fotos:\n- Usar el flash, puede ser una buena opción, verifica que todo se vea correctamente.\n- Limpiá bien el lente de la cámara del celular.\n- Mantené una distancia considerable del papel, mira siempre que las esquinas cuadren en la foto.\n- Utiliza alguna de las aplicaciones que nombramos más abajo para más calidad.</string>
    <string name="txtRecApps">Utiliza alguna de estas apps para sacar las fotos con una mejor calidad y nitidez:\n- CamScanner.\n- Genius Scan.\n- TinyScann.\n- Office Lens.</string>
</resources>