<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_inicio"
            android:icon="@drawable/ic_home"
            android:title="Inicio"/>
        <item
            android:id="@+id/item_becas"
            android:icon="@drawable/ic_becas"
            android:title="Área Becas"/>
        <item
            android:id="@+id/item_deporte"
            android:icon="@drawable/ic_logo_poli_viejito"
            android:title="Área Deportes"/>
        <item
            android:id="@+id/item_ciber"
            android:icon="@drawable/ic_ciber"
            android:title="Ciber Estudiantil"/>
        <item
            android:id="@+id/item_comedor"
            android:icon="@drawable/ic_menu_comedor"
            android:title="Comedor Universitario"/>
        <item
            android:id="@+id/item_poli"
            android:icon="@drawable/ic_poli"
            android:title="Polideportivo"/>
        <item
            android:id="@+id/item_resi"
            android:icon="@drawable/ic_residencia"
            android:title="Residencia Universitaria"/>
        <item
            android:id="@+id/item_transporte"
            android:icon="@drawable/ic_transporte"
            android:title="Transporte Universitario"/>
        <item
            android:id="@+id/item_upa"
            android:icon="@drawable/ic_upa"
            android:title="UAPU"/>
        <item
            android:id="@+id/item_conectividad"
            android:icon="@drawable/ic_wifi"
            android:title="Puntos de Conectividad"/>

    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="Otras opciones">

        <menu>
            <item
                android:id="@+id/item_perfil"
                android:icon="@drawable/ic_user"
                android:title="@string/itemPerfil"/>
            <item
                android:id="@+id/item_about"
                android:icon="@drawable/ic_b_bienestar"
                android:title="@string/itemNosotros"/>
            <item
                android:id="@+id/item_terminos"
                android:icon="@drawable/ic_terms"
                android:visible="false"
                android:title="@string/itemCondiciones"/>
        </menu>
    </item>

</menu>